crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__binary_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"a not b\"#)"
---
Node {
    node: Identifier(
        Identifier {
            names: [
                Node {
                    node: "a",
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 1,
                },
            ],
            pkgpath: "",
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 1,
}
