crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__binary_recovery_5.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"a ++ b\"#)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "a",
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            op: Add,
            right: Node {
                node: Unary(
                    UnaryExpr {
                        op: UAdd,
                        operand: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "b",
                                            filename: "",
                                            line: 1,
                                            column: 5,
                                            end_line: 1,
                                            end_column: 6,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 5,
                            end_line: 1,
                            end_column: 6,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 3,
                end_line: 1,
                end_column: 6,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}
